[package]
name = "dayplan"
version = "0.1.0"
edition = "2018"
authors = ["Rev Herr <revuniversal@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.2"
chrono = "0.4"
log = "0.4.14"
env_logger = "0.9"
anyhow = "1.0"